copy-pasted stuff from papers

--- a/docs/report/01-analytical.tex
+++ b/docs/report/01-analytical.tex
@@ -1,243 +1,149 @@
 \section{Аналитическая часть}
 
-В данной части будет идти речь о корпусах текстов, видах текстов и текстовых разметок. % XXX будет идти или идет?
+В данной части будет рассмотрена предметная область параллельных корпусов текстов, будут описаны виды текстовых разметок, структура научно-технических текстов и проблемы, возникающие при попытке автоматизации выравнивания текстов на уровне терминов.
 
 \subsection{Корпуса текстов}
 
-Корпусная лингвистика --- раздел компьютерной лингвистики, занимающийся разработкой общих принципов построения и использования лингвистических корпусов (корпусов текстов) с применением компьютерных технологий.
-Под лингвистическим, или языковым, корпусом текстов понимается большой, представленный в машиночитаемом формате, унифицированный, структурированный, размеченный, филологически компетентный массив языковых данных, предназначенный для решения конкретных лингвистических задач. \cite[с. 5]{cl}
+Одним из направлений корпусной лингвистики является создание и использование параллельных корпусов, которые используются для решения различных задач, таких как создание и настройка систем машинного перевода, сравнительное изучение языков, разработка теории переводческих исследований, преподавания языка~\cite{butenko2020-9}.
+Корпусы и конкордансы предоставляют лингвистам, переводчикам и студентам бесценный и ранее недоступный языковой материал, который характеризуется большим объемом, разнообразием стилей и жанров и возможностью быстрого поиска примеров проанализированных слов и конструкций.~\cite{butenko2020-1}
+
+Следует отметить, что под корпусом параллельных текстов понимается тип лингвистического корпуса, состоящий из исходного текста на одном языке и его перевода на другой или другие языки, а конкорданс --- одна из программ, которая позволяет обрабатывать и анализировать большие массивы текста, а также выявлять языковые шаблоны, которые в них содержатся.
+Конкорданс ищет конкретное слово или выражение в корпусе.
+После соответствующей команды программа выдает указанное количество текстовых фрагментов, содержащих нужные единицы измерения.
+На основании полученной информации возможно определить, какие функции, применение и использование устройства были определены в конкретном языковом пространстве.~\cite{butenko2020-1}
 
 \subsubsection{Виды}
 
-В таблице \ref{tab:coc} ниже представлена классификация корпусов по некоторым признакам.
+В отличие от других типов корпусов, отличительным дидактическим свойством корпусов параллельных текстов является многоязычие.
 
-\begin{table}[H]
-\centering
-        \caption{Классификация корпусов \cite[с. 16]{cl}}
-		\label{tab:coc}
-        \begin{adjustbox}{width=\textwidth}
-            \begin{tabular}{|p{0.3\textwidth}|p{0.7\textwidth}|}
-        \hline
-        Признак & Тип корпуса \\
-        \hline
-        \hline
-        Цель & многоцелевые, специализированные \\
-        \hline
-        % Параллельность & одноязычные, двуязычные, многоязычные \\
-        Параллельность & параллельные, сопоставимые (псевдопараллельные) \\
-        \hline
-        Тип языковых данных & письменные, устные (речевые), смешанные \\
-        \hline
-        <<Литературность>> & литературные, диалектные, разговорные, терминологические, смешанные \\
-        \hline
-        Жанр & литературные, фольклорные, драматургические, публицистические \\
-        \hline
-        Назначение & исследовательские, иллюстративные \\
-        \hline
-        % Динамичность & динамические, статические \\
-        % \hline
-        Разметка & размеченные, неразмеченные \\
-        \hline
-        Характер разметки & морфологические, синтаксические, семантические, анафорические и т. д. \\
-        \hline
-        % Доступность & свободно доступные, коммерческие, закрытые \\
-        % \hline
-        Объем текстов & полнотекстовые, <<фрагментнотекстовые>> \\
-        \hline
-		\end{tabular}
-        \end{adjustbox}
-\end{table}
+Корпусы параллельных текстов могут быть двуязычные и многоязычные.
+Двуязычные корпусы включают исходные тексты на одном языке и их переводы на другом.
+Многоязычные корпусы включают исходные текста на одном языке и их соответствующие переводы на другие языки.
 
-\newpage
+Корпусы могут быть однонаправленные, двунаправленные и многонаправленные.
+Однонаправленные корпусы позволяют осуществлять перевод с одного языка на другой (например, с английского на русский) без возможности обратного перевода (с русского на английский).
+Двунаправленные корпусы включают параллельные тексты на двух языках (английском и русском) и позволяют осуществлять перевод как с английского на русский, так и наоборот).
+Многонаправленные корпусы, включающие тексты на более чем двух языках, позволяют осуществлять перевод с любого языка на любой (в рамках существующих языков корпуса).
 
-В данной работе особое внимание уделяется параллельным корпусам, так как именно для работы с таким видом корпусов будет разрабатываться база данных. % XXX meh, уделяется; будет разрабатываться
-
-Параллельный корпус --- это двуязычный корпус.
-В нем хранится два множества текстов --- оригиналов и их переводов.
-Работа с корпусом (выравнивание, разметка, поиск) производится сразу с двумя текстами. %, ровно один из которых оригинальный.
-
-Для возможности использования параллельного корпуса в качестве инструмента исследования, тексты должны быть выровнены --- отдельные фрагменты оригинала должны совпадать с соответствующими фрагментами перевода \cite{postnauka}.
-
-Подробнее о применении, устройстве и проблематике параллельных корпусов будет говориться в следующих подразделах.
+Параллельный корпус имеет много общего с памятью переводов, но разница в том, что память переводов не сохраняет оригинальную последовательность текста, тогда как параллельные тексты — сохраняют.~\cite{butenko2020-1}
 
 \subsubsection{Применение}
 
-В данном подразделе рассматриваются некоторые применения параллельных корпусов.
+Параллельные корпусы используются: 
+\begin{enumerate}
+    \item в сравнительной лингвистике: для сравнительного анализа структур двух языков; 
+    \item в области переводов; для поиска эквивалентов оригинального текста в других языках; 
+    \item при обучении движков машинного перевода; 
+    \item при изучении языка; 
+    \item при составлении словарей. 
+\end{enumerate}
 
-\subsubsection*{Машинный перевод}
+Практика разработки и использования электронных текстовых корпусов показала, что создать универсальный корпус невозможно.
+Цели и задачи любого исследования, которое предполагается выполнить с помощью корпусов, определяют тип корпуса, правила отбора текстов, метод и степень обработки.
+В области корпусной лингвистики уже создано большое количество корпусов, предназначенных для различных видов исследований, и задача их классификации требует определения различных характеристик --- основы классификации.
 
-Машинный перевод (MT) представляет собой процесс перевода с одного естественного языка на другой с использованием компьютеров.
-Параллельные корпусы используются, как правило, для систем статистического машинного перевода, принцип работы которого заключается в анализе больших массивов параллельных текстов и в выборе для перевода наиболее часто встречающихся вариантов.
+Параллельные корпусы, представляющие множество текстов-оригиналов, написанных на каком-либо исходном языке, и переводов этих исходных текстов на один или несколько других языков; правда, существуют корпусы, в которых все языки признаются равнозначными, например, корпусы, созданные на основе официальных документов ООН или Европейского Сообщества.
 
-% \subsubsection*{Обработка естественного языка (NLP)}
-
-% \blindtext
-
-\subsubsection*{Кросс-языковой поиск информации (CLIR)}
-
-Параллельные корпуса могут использоваться для обучения моделей, способных искать информацию на одном языке и предоставлять информацию на другом.
-
-\subsubsection*{Разработка словарей и учебных материалов}
-
-Параллельные корпуса могут использоваться при разработке словарей и учебных материалов, например, для создания примеров употребления слов в контексте.
-
-\subsubsection*{Лингвистические исследования}
-
-В лингвистических исследованиях параллельные корпуса могут использоваться для подсчета частот встречаемости различных языковых элементов.
-Статистическими методами на материале корпуса можно определить, какие слова регулярно встречаются вместе и, таким образом, могут быть отнесены к устойчивым словосочетаниям. \cite[с. 81]{cl}
-
-\subsubsection{Устройство}
-
-Параллельные корпуса устроены таким образом, чтобы решались поставленные перед ними задачи.
-Типичная задача параллельных корпусов включает в себя поиск по корпусу по словам или по тегам.
-
-Для осуществления поиска по корпусу, в нем должна храниться следующая информация:
-\begin{itemize}
-    \item тексты и их метаданные,
-    \item выравнивание,
-    \item теги и аннотации.
-\end{itemize}
-
-Теги и аннотации, наряду с выровненными текстами обычно \cite{cl, survey, ruscorpora, opencorpora} хранятся в формате XML.
-Но хранение информации в таком формате имеет ряд недостатков:
-\begin{itemize}
-    \item Использование XML-тегов приводит к увеличению размера файлов и дублированию информации;
-    \item Поиск по текстовым файлам зачастую медленнее поиска по бинарным, особенно при большом количестве хранимой информации;
-    \item Ту же самую информацию можно хранить в виде бинарных файлов, используя при этом меньше места.
-\end{itemize}
+Параллельные корпусы используются для разработки эффективных  методов перевода, а также для сравнительных исследований языков.
+Он позволяет идентифицировать те или иные приемы перевода, оценить их эффективность, проанализировать лексику и грамматику текста перевода в сопоставлении с оригинальным текстом, сравнить и оценить различные стратегии перевода, найти на основе списков контекстов соответствия тем или иным стилистическим явлениям и выделить способы их передачи при переводе.~\cite{butenko2020-1}
 
 \subsection{Тексты}
 
-% FIXME future -> present
-В данном разделе будут рассмотрены виды текстовых разметок и структура технических текстов, а также будет описана проблема, возникающая при автоматическом выравнивании текстов на уровне терминов.
+Тексты корпусов обычно размечаются для удобства пользования, т. е. текстам и содержащимся в них языковым единицам приписываются специальные метки.
+Размеченные корпуса обеспечивают специализированными поисковыми системами, реализующими грамматические и лексические виды поиска.
+В зависимости о целей создания корпуса в него включают дополнительные виды разметки.~\cite{butenko2020-2}
 
 \subsubsection{Виды разметок}
 
-В данном подразделе описаны некоторые виды текстовых разметок.
+Разметка (tagging, annotation) корпуса лексикографических материалов заключается в приписывании источникам и их компонентам специальных лингвистических и экстралингвистических тэгов (токенов).
+Именно разметка позволяет идентифицировать первоисточники и обеспечивает семантический, осмысленный, расширенный поиск по различным тегам, параметрам и критериям.~\cite{lesnikov2019}
 
-\subsubsection*{Морфологическая}
-
-Представление в корпусе информации о морфологических формах и значениях (часть речи, род, падеж, вид...) является самостоятельной научной проблемой. \cite{ruscorpora}
-
-В национальном корпусе русского языка \cite{ruscorpora} морфологическая информация, приписываемая произвольной словоформе в тексте, содержательно делится на четыре типа информации:
-\begin{enumerate}
-    \item Лексема (лемма), которой принадлежит словоформа (указывается «словарная запись» данной лексемы и ее принадлежность к той или иной части речи).
-    \item Множество грамматических признаков данной лексемы, или словоклассифицирующие характеристики (например, род для существительного, переходность для глагола).
-    \item Множество грамматических признаков данной словоформы, или словоизменительные характеристики (например, падеж для существительного, число для глагола).
-    \item Информация о нестандартности грамматической формы, орфографических искажениях и т. п.
-\end{enumerate}
-
-Примеры тегов морфологической аннотации в НКРЯ \cite{ruscorpora}:
+Различают следующие виды разметок:
 \begin{itemize}
-    \item S	--- существительное (яблоня, лошадь, корпус, вечность);
-    \item A	--- прилагательное (коричневый, таинственный, морской);
-    \item NUM --- числительное (четыре, десять, много);
-    \item m	--- мужской род (работник, стол);
-    % \item f	--- женский род (работница, табуретка);
-    \item anim --- одушевленность (человек, ангел, утопленник);
-    % \item inan --- неодушевленность (рука, облако, культура);
-    \item sg --- единственное число (яблоко, гордость);
-    % \item pl --- множественное число (яблоки, ножницы, детишки);
-    \item nom --- именительный падеж (голова, сын, степь, сани, который);
-    % \item gen --- родительный падеж (головы, сына, степи, саней, которого);
-    % \item dat --- дательный падеж (голове, сыну, степи, саням, которому);
-    \item persn	--- личное имя (Иван, Дарья, Леопольд, Эстер, Гомер, Маугли).
+    \item морфологическая (part-of-speech tagging; грамматическая, частеречная; парсер) --- включает не только признак части речи, но и признаки грамматических категорий, свойственных данной части речи, т. е. в том или ином структурированном виде включаются лемма, признак части речи и признаки грамматических категорий (граммемы --- падеж, переходность, род, одушевленность, число). Морфологический анализ корпуса текстов может заключаться: в токенизации (разбиении на орфографические слова, элементарные знаки --- токены); в сегментации (на предложения, клаузулы и др. виды сегментов); в лемматизации (нормализация словоформ, т. е. сведение различных словоформ к некоторому единому представлению --- к исходной форме, или лемме); в стемминге (нормализация словоформ, когда разные словоформы приводятся к <<псевдооснове>> или усекаются до их корневой части, для отражения инвариантного значения слова); в частеречном тэгинге (pos-tagging, т. е. указание части речи для каждой словоформы в тексте) или в полном морфологическом анализе --- приписывании грамматических характеристик всем словоформам; в построении гипотез для нераспознанных слов; 
+    % \item синтаксическая --- является результатом парсинга, выполняемого программно в автоматизированном режиме на основе данных морфологического анализа, описывает синтаксические связи между лексическими единицами и различные синтаксические конструкции;
+    \item семантическая --- приписывает единицам текста один или несколько семантических и словообразовательных признаков; предусматривает спецификацию значения слов, разрешение омонимии и синонимии, категоризацию слов (разряды, родовые и видовые дескрипторы), выделение тематических классов, признаков каузативности, оценочных и деривационных характеристик, семантических ролей (например, агенс, инструмент, пациенс, результат);
+    \item структурная --- эксплицирует логическую структуру источника и предназначена для выделения структурных элементов (том, книга, часть, глава, действие, явление, реплика, сноска, ремарка, строфа, стих, а также: абзац, предложение, словоформа и текстоформа; таблица, формула и др.);
+    \item терминологическая --- предназначена для фиксации терминов и особенности использования общеупотребительной лексики;
+    \item экстралингвистическая (метаразметка метаданных) --- включает внешнюю разметку, формальную структурную разметку, а также технико-технологическую разметку (кодировку, даты обработки, исполнителей, источник электронной версии);
+    \item и др.~\cite{lesnikov2019}
 \end{itemize}
 
-\subsubsection*{Синтаксическая}
+% \subsubsection*{Морфологическая}
 
-Синтаксическую структуру предложения можно представить в виде дерева зависимостей, в котором каждая дуга (стрелка) идет из главного слова (<<хозяина>>) в зависимое слово (<<слугу>>) и помечена именем определенного синтаксического отношения.
-Каждое слово предложения, кроме одного (называемого вершиной предложения), зависит только от одного хозяина и только по одному из синтаксических отношений.
-Отношения связывают отдельные слова, а не словосочетания (за исключением специальных случаев).
-В синтаксических группах (например, в сочиненной именной группе или придаточной клаузе) один из членов группы выступает в качестве представителя группы во внешних связях, объявляется вершиной группы, а остальные члены группы синтаксически зависят от него. \cite{ruscorpora}
+% \subsubsection*{Синтаксическая}
 
-На рисунке ниже представлена синтаксическая разметка в двух форматах --- в формате универсальных зависимостей (UD) и в формате СинТагРус.
+% \subsubsection*{Семантическая}
+
+% \subsubsection*{Метаразметка}
+
+\subsubsection{Структура научно-технических текстов}
+
+Композиционная структура учебно-научного текста в первом приближении состоит из реферативного раздела, корпуса научно-технической статьи и информативного раздела.
+При этом структурные элементы научно-учебных текстов можно разделить на обязательные и факультативные, то есть те, которые приводятся в зависимости от необходимости.~\cite{butenko2021}
+
+В нотациях Бекуса-Наура композиционную структуру учебно-научных текстов можно задать следующим образом:
+
+$$
+St_{i} ::= \langle X^{1}, X^{2}, X^{3}\rangle ,
+$$
+где $ X^{1} $ — реферативный раздел учебно-научного текста, $ X^{2} $ — корпус учебно-научного текста, $ X^{3} $ — информативный раздел научно-учебного текста.
+
+$ X^{1} $ — реферативный раздел учебно-научного текста, состоящий из следующих элементов:
+
+$$
+X^{1} ::= \langle x_{11}, x_{12}, x_{13}, x_{14}, x_{15}\rangle |\langle x_{11}, x_{12}, x_{13}, x_{14}\rangle ,
+$$
+где $ x_{11} $ — название, $ x_{12} $ — автор(ы), $ x_{13} $ — оглавление, $ x_{14} $ — введение, $ x_{15} $ — предисловие.
+
+$ X^{2} $ — корпус учебно-научного текста, который можно представить в виде набора из следующих элементов:
+
+$$
+X^{2} ::= \langle x_{21}, x_{22}, x_{23}\rangle |\langle x_{21}, x_{22}\rangle |\langle x_{21}, x_{23}\rangle |\langle x_{21}\rangle ,
+$$
+где $ x_{21} $ — основной текст, $ x_{22} $ — вопросы, $ x_{23} $ — задания и упражнения.
+
+$ X^{3} $ — информативный раздел учебно-научного текста, для которого справедливо
+
+$$
+X^{3} ::= \langle x_{31}, x_{32}, x_{33}\rangle |\langle x_{31}, x_{33}\rangle |\langle x_{32}, x_{33}\rangle |\langle x_{33}\rangle ,
+$$
+где $ x_{31} $ — приложения, $ x_{32} $ — приложения, $ x_{33} $ — ссылки на источник.
+
+На рисунке \ref{fig:ts} представлена структурная схема элементов учебно-научного текста. 
 
 \begin{figure}[H]
 	\centering
-	\includegraphics[width=0.9\textwidth]{img/syntax.png}
-	\caption{Разметка предложения в формате UD (сверху) и СинТагРус (снизу). Стрелки отношений в сочиненной группе выделены. Функциональные отношения UD обозначены пунктирными стрелками.}
-	\label{fig:syn}
+	\includegraphics[width=0.9\textwidth]{img/tagging-struct.png}
+	\caption{Структурные элементы учебно-научных текстов}
+	\label{fig:ts}
 \end{figure}
 
-\subsubsection*{Семантическая}
+На основе проведенного анализа композиционной структуры учебно-научных текстов модель учебно-научного текста $St$ целесообразно представить в виде: 
+$$
+St = \langle E^L, R \rangle,
+$$
+где $E$~---~структурный элемент, $R$~---~отношения между структурными элементами, $L$~---~уровень структурного элемента.
+При этом $L = \{l1, \dots l5\}$, где l1~---~раздел, l2~---~ пункт,  l3~---~подпункт, l4 ~---~абзац, l5~---~ предложение.~\cite{butenko2021}
 
-При семантической разметке большинству слов в тексте приписывается один или несколько семантических и словообразовательных признаков, например, 'лицо', 'вещество', 'пространство', 'скорость', 'движение', 'обладание', 'свойство человека', 'диминутив', 'отглагольное имя' и т. п.
-В национальном корпусе русского языка \cite{ruscorpora} используется фасетная классификация, при которой одно слово может попадать в несколько классов.
+Представление текста в виде упорядоченного набора структурных элементов дает возможность анализировать с помощью математических методов как вероятностную, так и логическую структуру всего учебно-научного текста.
 
-\subsubsection*{Метаразметка}
+Таким образом, модель композиционной структуры учебно-научного текста --- это граф, вершинами и ребрами которого являются только полноценные единицы --- разделы, пункты, подпункты, то есть наиболее значимые структурные элементы.~\cite{butenko2021}
 
-Под метаразметкой понимается приписывание тексту атрибутов, характеризующих обстоятельства его создания, автора, тематику, жанровые особенности и др. \cite{ruscorpora}
-
-\subsubsection{Технические тексты и их структура}
-
-Когда кто-то называет текст <<техническим>> в повседневной жизни, под этим обычно понимается сложность его восприятия.
-% FIXME too long
-В ученых кругах --- наоборот, <<техничность>> текста означает б\textbf{о}льшую доступность его обработки вследствие лишенности фигуративного языка, минимального использования переносных значений слов и возможности понимать его содержимое в буквальном смысле. \cite{tt}
-
-Но четкого и общепринятого определения у понятия <<технический текст>> нет.
-
-Тем не менее, у людей есть общее представление о том, какой текст является техническим, а какой --- нет.
-
-% FIXME too long
-Исходя из предположения о том, что среднестатистический человек способен оценивать <<техничность>> текста, исследование \cite{tt}, включало проведение массового опроса участников, в результате которого были выделены критерии, значения которых обычно выше у технических текстов.
-
-У технических текстов преобладают следующие критерии:
-\begin{itemize}
-    \item наличие заголовков,
-    \item определение темы и фокусировка на ней,
-    \item предоставление знаний,
-    \item серьезность и объективность,
-    \item логичность и последовательность,
-    \item иерархическая организация,
-    \item использование специализированной терминологии.
-\end{itemize}
-
-Проанализировав ряд текстов на предмет их соответствия указанным выше критериям, становится возможным выявить структуру, характерную техническим текстам, а именно:
-\begin{enumerate}
-    \item Резюме, аннотация --- краткое описание содержания текста.
-    \item Введение --- знакомство с проблемой.
-    \item Теоретическая часть --- более глубокое знакомство с проблемой, знакомство читателя с методологией исследования и обоснованный выбор методов, которые будут использоваться в ходе исследования.
-    \item Методология --- описание применения выбранных методов в ходе исследования.
-    \item Результаты --- представление полученных результатов.
-    \item Обсуждение и анализ результатов.
-    \item Заключение.
-\end{enumerate}
+\newpage
 
 \subsubsection{Проблема терминов}
 
-Выравнивание текстов на уровне секций, абзацев и предложений обычно не представляет трудности, и часто такое выравнивание можно автоматизировать.
-Проблемы возникают при попытке выровнять тексты на уровне терминов.
-Автоматически такое выравнивание произвести бывает сложно.
-Причина сложности автоматического выравнивания на уровне терминов будет рассмотрена ниже на примере фразеологизмов.
-
-Набор слов в фразеологизмах может иметь разные значения в зависимости от контекста.
-Например, предложение <<It was a piece of cake>> нельзя перевести однозначно, не зная контекста, в котором оно употреблено.
-
-В контексте 
+В ходе исследования \cite{butenko2022} были выделены основные проблемы при автоматическом извлечении терминов:
 \begin{itemize}
-    \item Was it difficult?
-    \item It was a piece of cake.
+    \item неправильное определение границ терминов-словосочетаний, состоящих из двух и более слов и составных терминов; 
+    \item  распознавание составных терминов и терминов-словосочетаний, состоящих из двух и более слов; в частности, распознавание лексической единицы как части составного термина или как свободной лексической единицы; 
+    \item определение лексической единицы как термина в зависимости от контекста и тематики текста, в котором данная лексическая единица употребляется; 
+    \item объемные списки терминов-кандидатов, которые необходимо проверять вручную, поскольку частота не является достаточным критерием для оценки того, является ли выделенное слово термином или нет. 
 \end{itemize}
-его можно перевести, как <<было просто>>, а в контексте
-\begin{itemize}
-    \item What was in the box?
-    \item It was a piece of cake.
-\end{itemize}
-оно точно имеет отношение к куску пирога.
 
-Таким образом, для корректности перевода, машинный перевод должен учитывать контекст, в котором термин употреблен.
-Но это и есть одна из задач, для решения которой параллельные корпуса и создаются изначально.
-В этом и заключается проблема терминов.
-
-% \subsection{Существующие параллельные корпуса}
-
-% TODO: Надо ли описывать 3-4 существующих параллельных корпуса, делать сравнительную таблицу по критериям:
-% - Способ хранения текстов и разметки
-% - Возможность загрузки собственных текстов
-% - Возможность разметки собственных текстов
-% и подводить к актуальности разработки БД?
+Точность определения границ термина при автоматической разметки является одной из основных лингвистических задач. Более того, на сегодняшний день существует малое количество бесплатных ресурсов, а также отсутствуют веб-платформ для автоматической разметки русскоязычных текстов.~\cite{butenko2022}
 
 \subsection{Вывод}
 
-В данной части была рассмотрена предметная область параллельных корпусов текстов, были описаны виды текстовых разметок, структура технический текстов и проблема, возникающая при попытке автоматизации выравнивания текстов на уровне терминов.
+В данной части была рассмотрена предметная область параллельных корпусов текстов, были описаны виды текстовых разметок, структура научно-технических текстов и проблемы, возникающие при попытке автоматизации выравнивания текстов на уровне терминов.
