--- a/docs/bibliography.bib
+++ b/docs/bibliography.bib
@@ -1,14 +1,68 @@
+@article{butenko2020-9,
+  author       = {Бутенко, Ю.И. and Маргарян, Т.Д. and Кочеткова, Е.Л.},
+  title        = {Переводческая деятельность в условиях цифровизации: обучение и трудоустройство},
+  journal      = {Alma mater (Вестник высшей школы)},
+  year         = 2020,
+  number       = 9,
+  pages        = {98--103},
+  doi          = {10.20339/AM.09-20.098}
+}
+
+@article{butenko2020-1,
+  author       = {Бутенко, Ю.И. and Киселёва, А.Д},
+  title        = {Анализ современных корпусов параллельных текстов},
+  journal      = {Актуальные проблемы лингвистики и лингводидактики в неязыковом вузе: 4-я Международная научно-практическая конференция},
+  year         = 2020,
+  volume       = 1,
+  pages        = {238--242},
+  doi          = {TODO}
+}
+
+@article{butenko2020-2,
+  author       = {Бутенко, Ю.И. and Строганов, Ю.В. and Бабаджанян, Р.В.},
+  title        = {Исследовательский прототип параллельного корпуса  
+научно-технических текстов},
+  journal      = {Актуальные проблемы лингвистики и лингводидактики в неязыковом вузе: 4-я Международная научно-практическая конференция},
+  year         = 2020,
+  volume       = 1,
+  pages        = {205--209},
+  doi          = {TODO}
+}
+
+@article{butenko2021,
+  author       = {Бутенко, Ю.И.},
+  title        = {Модель учебно-научного текста для разметки корпуса научно-технических текстов},
+  journal      = {Экономика. Информатика},
+  year         = 2021,
+  volume       = 48,
+  number       = 1,
+  pages        = {123--129},
+  doi          = {10.52575/2687-0932-2021-48-1-123-129}
+}
+
+@article{butenko2022,
+  author       = {Бутенко, Ю.И. and Сулейманова, Э.В.},
+  title        = {Терминологическая разметка научно-технических текстов в специальном корпусе},
+  journal      = {Проблемы лингвистики и лингводидактики в неязыковом вузе: 5-я Международная научно-практическая конференция},
+  year         = 2022,
+  volume       = 1,
+  pages        = {329--337},
+  doi          = {TODO}
+}
+
+@article{lesnikov2019,
+  author       = {Лесников, В.С.},
+  title        = {Виды разметок текстовых корпусов русского языка},
+  journal      = {Научно-техническая информация. Сер. 2. Информационные процессы и системы},
+  year         = 2019,
+  number       = 9,
+  pages        = {27--30},
+}
+
 @misc{ruscorpora,
 	etitle   = {Национальный корпус русского языка},
 	url      = {\url{https://ruscorpora.ru}},
     accessed = {01.03.2024},
-}
-
-@inbook{cl,
-   bookauthor = {В.П. Захаров and С.Ю. Богданова},
-   note = {Корпусная лингвистика: Учебник для студентов направления <<Лингвистика>>. 2-е изд., перераб. и дополн., -- СПб.: СПбГУ. РИО. Филологический факультет, 2013. -- 148 с.},
-   isbn = {978-5-88267-316-0},
-   language = {russian},
 }
 
 @misc{opencorpora,
@@ -21,29 +75,4 @@
 	etitle   = {Параллельные корпусы текстов},
 	url      = {\url{https://postnauka.org/video/54851}},
     accessed = {25.03.2024},
-}
-
-
-@article{tt,
-    title = {What is technical text?},
-    journal = {Language Sciences},
-    volume = {19},
-    number = {4},
-    pages = {391-423},
-    year = {1997},
-    issn = {0388-0001},
-    doi = {https://doi.org/10.1016/S0388-0001(97)00003-X},
-    url = {\url{https://www.sciencedirect.com/science/article/pii/S038800019700003X}},
-    author = {Terry Copeck and Ken Barker and Sylvain Delisle and Stan Szpakowicz and Jean-François Delannoy},
-}
-
-@article{survey,
-    author = {Khosla, Sonal},
-    year = 2018,
-    month = 08,
-    pages = {13-19},
-    title = {A SURVEY REPORT ON THE EXISTING METHODS OF BUILDING A PARALLEL CORPUS},
-    volume = 9,
-    journal = {International Journal of Advanced Research in Computer Science},
-    doi = {10.26483/ijarcs.v9i4.6171}
 }
