--- a/docs/report/00-introduction.tex
+++ b/docs/report/00-introduction.tex
@@ -1,1 +1,29 @@
 \phantomsection\section*{ВВЕДЕНИЕ}\addcontentsline{toc}{section}{ВВЕДЕНИЕ}
+
+В современном мире немаловажное значение имеет корпусная лингвистика.
+Корпуса текстов находят применение в различных областях --- в машинном переводе, в разработке словарей, в лингвистических исследованиях.
+Для того, чтобы из корпуса текстов можно было извлекать какую-то пользу, тексты в нем должны быть размечены.
+Существуют алгоритмы, позволяющие автоматически производить разметку.
+Но зачастую, для проверки ее корректности, все равно требуется вмешательство человека.
+
+На данный момент не существует открытых параллельных корпусов технических текстов.
+Также нет открытых информационных систем, позволяющих одновременно
+\begin{itemize}
+    \item производить разметку текста в параллельном корпусе,
+    \item производить поиск по параллельному корпусу,
+    \item организовать удобную работу множества разметчиков.
+\end{itemize}
+
+Создание такой информационной системы позволит во многом автоматизировать рабочее место разметчиков параллельного корпуса.
+
+Целью данной работы является разработка базы данных для автоматизации рабочего места разметчиков параллельного корпуса технических текстов.
+
+Задачи курсового проекта:
+\begin{itemize}
+    \item провести анализ предметной области параллельных корпусов текстов;
+    \item спроектировать сущности базы данных и ограничения целостности АРМ разметчика корпуса технических текстов;
+    \item выбрать средства реализации базы данных и приложения;
+    \item разработать сущности базы данных и реализовать ограничения целостности базы данных;
+    \item описать интерфейс доступа к базе данных;
+    \item исследовать зависимость времени ответа от количества запросов в секунду.
+\end{itemize}
