update main, design, techno, research - skeletons

--- a/docs/report/02-design.tex
+++ b/docs/report/02-design.tex
@@ -1,3 +1,13 @@
-\section{Конструкторская часть}
+\section{Конструкторский раздел}
+
+\subsection{Проектирование базы данных}
+
+\subsection{Описание сущностей}
+
+\subsection{Описание ограничений целостности}
+
+\subsection{Описание функций, процедур и триггеров}
+
+\subsection{Описание ролевой модели}
 
 \subsection{Вывод}
