--- a/docs/report/03-technological.tex
+++ b/docs/report/03-technological.tex
@@ -1,3 +1,25 @@
-\section{Технологическая часть}
+\section{Технологический раздел}
+
+\subsection{Выбор средств реализации}
+
+% Обоснованный выбор БД, СУБД и приложения
+
+\subsection{Описание реализаций}
+
+\subsubsection{Сущности базы данных}
+
+\subsubsection{Ограничения целостности базы данных}
+
+\subsubsection{Ролевая модель на уровне базы данных}
+
+\subsubsection{Функции, процедуры и триггеры}
+
+% В формате схемы
+
+\subsubsection{Тестирование}
+
+% Описание методов тестирования и тестовых кейсов для всех разработанных на стороне базы данных функций;
+
+\subsubsection{Интерфейс доступа к базе данных}
 
 \subsection{Вывод}
