--- a/docs/report/04-research.tex
+++ b/docs/report/04-research.tex
@@ -1,3 +1,9 @@
-\section{Исследовательская часть}
+\section{Исследовательский раздел}
+
+\subsection{Технические характеристики}
+
+\subsection{Описание исследования}
+
+\subsection{Проведение исследования}
 
 \subsection{Вывод}
