--- a/docs/main.tex
+++ b/docs/main.tex
@@ -15,10 +15,10 @@
 \include{report/00-introduction}
 \include{report/01-analytical}
 
-% \include{report/02-design}
-% \include{report/03-technological}
-% \include{report/04-research}
-% \include{report/05-conclusion}
+\include{report/02-design}
+\include{report/03-technological}
+\include{report/04-research}
+\include{report/05-conclusion}
 \include{report/06-bibliography}
 
 % \include{report/appendix-a}
